Further cleanup, transitioning from task answers to answer table answers.

--- a/app/views/paths/_enroll.html.erb
+++ b/app/views/paths/_enroll.html.erb
@@ -1,4 +1,4 @@
-<%= form_for current_user.enrollments.build(:path_id => @path.id) do |f| %>
+<%= form_for current_user.enrollments.new(:path_id => @path.id) do |f| %>
   <%= f.hidden_field :path_id %>
   <div class="actions">
     <%= f.submit "Enroll", :class=> "btn primary" %>
