--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,15 +1,13 @@
-<section style="float:left; margin-right: 60px;">
-  <img src="https://s3-us-west-1.amazonaws.com/moonlite/static/logo.png" width="240" height="300"/>
-</section>
-<section>
-  <h1 style="font-size: 100px; margin-top:50px;">Meta<span style="color:green">Bright</span></h1>
-  <h3>Knowledge is an asset. Track it.</h3>
-  <br>
-  <p style="font-size: 16px;">What you <strong>know</strong> makes you <strong>valuable</strong>. Is your true value <strong style="color:green;">recognized?</strong></p>
-  <p><%= link_to "Sign In", signin_path, :class => "btn primary xlarge" %></p>
-  <br>
-  <p>Don't have an account? Request an invite below.</p>
-  <%= form_for(:pages, :url => invitation_path, :method => "GET") do |f| %>
-  <%= f.text_field :email, :autofocus => true, :placeholder => "Enter your email address..." %> <%= f.submit "Submit", :class => "btn secondary"  %>
-  <% end %>
+<section id="landing_page">
+	<body>
+		<div id="center_box">
+			
+		</div>
+		
+		
+		
+		
+		
+		
+	</body>
 </section>
