--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer>
   <nav>
+    <% if @is_consumer %>
     <p class="quote">Stay hungry, stay foolish.</p>
+    <% end %>
   </nav>
 </footer>
