--- a/app/views/user_roles/index.html.erb
+++ b/app/views/user_roles/index.html.erb
@@ -1,5 +1,5 @@
 <section id="company-settings" style="min-height: 500px;">
-  <%= render "companies/tab_header", { :company => current_user.company, :mode => "roles" } %>
+  <%= render "companies/tab_header", { :company => current_company, :mode => "roles" } %>
   <section>
     <h2 style="margin-bottom:15px;">User roles</h2>
     <table>
