fixing path settings modal

--- a/app/views/paths/_settings.html.erb
+++ b/app/views/paths/_settings.html.erb
@@ -105,7 +105,7 @@
     </div>
   </div>
   <hr>
-  <div style="margin: 10px 0;">
+  <div style="margin: 10px 0; padding-bottom:20px;">
     <div style="float:left;">
     <%= link_to "Access Control", edit_path_path(path, :m => "access_control"), :class => "btn secondary" %>
     <% if path.is_published %>
