--- a/app/views/paths/_settings_modal.html.erb
+++ b/app/views/paths/_settings_modal.html.erb
@@ -3,7 +3,7 @@
     <a href="#" class="close"></a>
     <h3><%= name_for_paths %> Settings</h3>
   </div>
-  <div class="modal-body" style="height: 500px; overflow: auto;">
+  <div class="modal-body">
     <%= render "settings", { :path => path, :categories => categories } %>
   </div>
 </div>
