Fixing up challege and views for enterprise.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer style="margin-top:20px;">
   <nav>
     <% if @is_consumer %>
     <p class="quote">Stay hungry, stay foolish.</p>
