--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <% if current_user.company.custom_style.mode == 1 || (current_user.company.custom_style.mode == 2 && @enable_administration) %>
   <style><%= current_user.company.custom_style.styles %></style>
   <% end %>
+<% elsif @possible_company && @possible_company.custom_style.mode == 1 %>
+  <style><%= @possible_company.custom_style.styles %></style>
 <% end %>
 
 </head>
