--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -74,7 +74,7 @@
               <%= render "sections/overview", { :s => s } %>
             </div>
           </div>
-          <div class="section_questions_container row" style="margin: 10px 0px 0px 0px; display:none;">
+          <div class="section_questions_container row" style="display:none;">
             <%= render "sections/edit_tasks", { :section => s, :tasks => s.tasks, :display_new_task_form => true, :new_task => s.tasks.new } %>
           </div>
           <div class="section_content_container row" style="margin: 10px 0px 0px 0px; display:none;">
