Adjustments to company landing page logo.

--- a/app/views/pages/company_landing.html.erb
+++ b/app/views/pages/company_landing.html.erb
@@ -1,6 +1,6 @@
 <div class="row" style="margin-top: 25px;">
   <div class="span8">
-    <%= image_tag @possible_company.big_logo_link, style: "height: 200px; max-width: 400px;" %>
+    <%= image_tag @possible_company.big_logo_link, style: "max-height:280px; margin-top:-40px; float:right; margin-right:75px; max-width: 400px;" %>
   </div>
   <div class="span8">
     <h1 style="font-size: 80px; margin-top:25px;"><%= @possible_company.home_title %></h1>
