Adj color of dashbaord button on path edit page.

--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -20,7 +20,7 @@
     <% else %>
       <%= link_to "Publish", publish_path_path(@path), :confirm => "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes.", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
     <% end %>
-    <%= link_to "Dashboard", dashboard_path_path(@path), :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+    <%= link_to "Dashboard", dashboard_path_path(@path), :class => "btn info", :style => "margin:10px 0 10px 10px;" %>
     <span class="btn secondary edit_path_settings_button" style="margin:10px 0 0 10px;">Settings</span>
   </div>
   <div class="span3">
