A FUCK TON of bug fixes.

--- a/app/views/paths/_dashboard_unresolved_tasks.html.erb
+++ b/app/views/paths/_dashboard_unresolved_tasks.html.erb
@@ -28,8 +28,9 @@
               <option value="10">Full points</option>
             </select>
             <%= submit_tag "Save", :class => "btn primary", :style => "margin-left: 10px;" %>
-            <% end %>
+            <% else %>
             <%= submit_tag "Delete", :class => "btn danger", :style => "margin-left: 10px;" %>
+            <% end %>
           </form>
         </div>
       </li> 
