--- a/app/views/mailer/path_result.html.erb
+++ b/app/views/mailer/path_result.html.erb
@@ -1,11 +1,12 @@
 <% if @is_passed %>
 <p>Congratulations on passing the <%= @path.name %> <%= @name_for_paths %> with a score of <%= @enrollment.percentage_correct %>% and <%= @enrollment.total_points %> points.</p>
-<p>You're score has also been sent to your <%= @current_company.name %> administrator and logged in your profile.</p>
-<p>Stay tuned to updates on future <%= @name_for_paths.pluralize %>!</p>
+<p>Your score has also been sent to your <%= @current_company.name %> administrator and logged in your profile. Stay tuned to updates on future <%= @name_for_paths.pluralize %>!</p>
 <% else %>
 <p>Hello <%= @user.name %>,</p>
-<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @name_for_paths %>. You got <%= @enrollment.percentage_correct %>% correct, and you need to get <%= @path.passing_score %>% or better.</p>
-<p>But don't worry! You can retake the <%= @name_for_paths %> at any time using the link below. Good luck!</p>
-<p><a href="<%= @retake_url %>">Retake Certification</a></p>
+<p>Unfortunately you did not get a high enough score to pass the <%= @path.name %> <%= @name_for_paths %>. You got <%= @enrollment.percentage_correct %>% correct, and you need to get <%= @path.passing_score %>% or better. Your <%= @current_company.name %> administrators will be reaching out to you soon.</p>
+  <% if @path.enable_path_retakes %>
+  <p>But don't worry! You can retake the <%= @name_for_paths %> at any time using the link below. Good luck!</p>
+  <p><a href="<%= @retake_url %>">Retake Certification</a></p>
+  <% end %>
 <% end %>
-<p>-<%= @current_company.name %> admins</p>
+<p>-Team <%= @current_company.name %></p>
