Added link to section content if present in continue, recording emails in sent email table, and fixed send email script so that it doesn't send out duplicates (one before grading, one after)

--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -80,5 +80,8 @@
     <%= submit_tag "Next", :class => "btn primary", :id => "submit_button" %>
     <%= image_tag "/images/loading.gif", :size => "23x23", :style => "vertical-align:middle; margin-left: 5px; display:none;", :class => "loading_image" %>
     <div class="btn secondary" id="help_button" style="margin-left: 15px;">Help</div>
+    <% unless @section.instructions.blank? %>
+      <%= link_to "Review Section Content", @section, class: "btn secondary", style: "float:right;" %>
+    <% end %>
   </div>
 </div>
