--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
         <h3><%= link_to company_logo.html_safe, current_user ? root_path : "#", :style => "font-size: 26px;" %></h3>
         <% if signed_in? %>
         <ul class="top_nav_bar">
+          <li><%= link_to "Home", root_path %></li>
           <% if @enable_browsing %><li><%= link_to "Explore", explore_path %></li><% end %>
           <% if @enable_user_creation %><li><%= link_to "Create", create_path %></li><% end %>
           <li>
