--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div style="padding:15px;">
     <blockquote style="margin-top:0px;">
-      <p>
+      <p style="width:800px;">
         <%= task.question %>
       </p>
     </blockquote>
